fix overlapping title hover affects

--- a/web/themes/custom/asulib_barrio/scss/components/views.scss
+++ b/web/themes/custom/asulib_barrio/scss/components/views.scss
@@ -233,6 +233,12 @@
   max-width: 200px;
 }
 
+h3.card-title a:hover {
+  line-height: 1.4em;
+  text-decoration: none;
+}     
+
+
 .main-content .thumb-image-border a {
   border-bottom: none;
 }
